notifications more mobile friendly; fix overflowing mobile testnet header

--- a/src/app/_components/native-rune-prompt/native-rune-prompt.component.scss
+++ b/src/app/_components/native-rune-prompt/native-rune-prompt.component.scss
@@ -1,5 +1,1 @@
-:host {
-  position: absolute;
-  top: 16px;
-  right: 32px;
-}
+
